source/blender/editors/space_api/spacetypes.c
@@ -276,12 +276,10 @@ void ED_region_draw_cb_draw(const bContext *C, ARegion *region, int type)
   for (rdc = region->type->drawcalls.first; rdc; rdc = rdc->next) {
     if (rdc->type == type) {
       rdc->draw(C, region, rdc->customdata);
-      has_drawn_something = true;
+
+      /* This is needed until we get rid of BGL which can change the states we are tracking. */
+      GPU_bgl_end();
     }
-  }
-  if (has_drawn_something) {
-    /* This is needed until we get rid of BGL which can change the states we are tracking. */
-    GPU_bgl_end();
   }
 }
 
